fix(ui): prevent child elements from overflowing parent table boundle

--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -15,6 +15,12 @@
 .Table {
     min-width: '1280px';
     max-width: '1280px';
+    table-layout: fixed;
+    td {
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        white-space: normal;
+    }
 }
 
 .Search {
